# StrategyGame

./: Cargo.toml  README.md  assets_sources.txt
assets/: kostka_green.glb  kostka_orange.glb  kostka_yellow.glb  mountains.glb  stall.glb  tree.glb
saves/: [2025-12-30 17:22:40.321284865 +01:00]-crown-70G.txt  [2025-12-30 17:22:44.349388085 +01:00]-crown-120G.txt  [2025-12-30 17:27:23.366017045 +01:00]-pickaxe-30G.txt  [2025-12-30 23:37:11.207976683 +01:00]-crown-30G.txt  [2026-01-15 20:08:49.953318925 +01:00]-leaf-24G.txt  [2026-01-16 14:52:27.212002713 +01:00]-pickaxe-130G.txt  [2026-01-16 17:28:49.892922447 +01:00]-leaf-100G.txt
src/: bot_players.rs  controls.rs  environment.rs  errors.rs  main.rs  main_menu.rs  military.rs  politics.rs  saves.rs  ui.rs
src/bot_players/: bots_system.rs
src/controls/: camera.rs  new_round.rs
src/environment/: buildings.rs  env_models.rs  map.rs  misc.rs
src/errors/: error_handler.rs  my_errors.rs
src/main_menu/: load_game_menu.rs  main_menu_systems.rs  main_menu_tab.rs  new_game_tab.rs
src/military/: army.rs  army_movement.rs  recruitment.rs
src/politics/: countries.rs  political_map.rs  war.rs
src/saves/: loading.rs  saveing.rs
src/ui/: army_tab.rs  country_tab.rs  country_tab_systems.rs  in_game_menu.rs  next_round_button.rs  saving_window.rs
