[package]
name = "projekt2"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["serialize"] }
bevy_platform = "0.17.3"
bevy_scene = "0.17.3"
chrono = "0.4.42"
hexx = { version = "0.23.0", features = ["serde"] }
rand = "0.9.2"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
